# pyrxmesh

./: .gitignore  .gitmodules  BINDINGS.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  build_all.sh  build_quadwild.sh  computesanitizer.txt  debug_crash.sh  pyproject.toml  serve_demo.py
.github/workflows/: deploy-site.yml
RXMesh/: CMakeLists.txt
RXMesh/apps/Delaunay/: delaunay_rxmesh.cuh
RXMesh/apps/Remesh/: link_condition.cuh  remesh_rxmesh.cuh  util.cuh
RXMesh/cmake/: RXMeshTarget.cmake
RXMesh/include/rxmesh/: attribute.h  gpu_build_topology.cu  gpu_build_topology.cuh  gpu_patch_build.cu  gpu_patch_build.cuh  lp_hashtable.cu  patch_lock.cu  patch_lock.h  patch_stash.cu  reduce_handle.cu  rxmesh.cpp  rxmesh.h  rxmesh_dynamic.cu  rxmesh_dynamic.h  rxmesh_static.cu  rxmesh_static.h
RXMesh/include/rxmesh/diff/: scalar_term.h
RXMesh/include/rxmesh/kernels/: query_dispatcher.cuh
RXMesh/include/rxmesh/patcher/: patcher.cu  patcher.h
RXMesh/include/rxmesh/util/: cuda13_compat.h  cuda_query.h  macros.h  report.h
boffins_room/: 20_isotropic_vs_adaptive_crash.md
docs/: _site_index.html  bench_remesh.py  demo_fscq.py  demo_penner.py  demo_penner_ed.py  demo_pyrxmesh.py  demo_quadwild.py  demo_quadwild_dump.py  generate_demo.py  generate_demo_penner.py  generate_demo_quadwild.py  generate_visual_compare.py  penner_vs_pennergpu.py  penner_vs_quadwild.py  penner_vs_quadwild_dataset.py  pyrxmesh_vs_quadwild.py  template.html
patches/: fix_cuda13_compat.py
quadwild/components/field_computation/: mesh_manager.h
quadwild/libs/OpenMesh/src/OpenMesh/Core/Mesh/: AttribKernelT.hh
quadwild/quadwild/: functions.cpp
src/: _pyrxmesh.cpp  array_support.h  checkpoint.h  feature_remesh.cuh  glm_compat.h  gpu_bvh.cu  gpu_bvh.cuh  op_cross_collapse.cuh  op_delaunay.cu  op_edge_collapse.cu  op_edge_flip.cu  op_edge_split.cu  op_feature_remesh.cu  op_geodesic.cu  op_param.cu  op_qslim.cu  op_quadwild.cu  op_remesh.cu  op_scp.cu  op_sec.cu  pipeline.cu  pipeline.h  pyrxmesh_c.cu  pyrxmesh_c.h  vcg_remesh.cpp  vcg_remesh.h
src/penner/: gpu_crossfield.cuh  op_penner.cu  penner_angles.cuh  penner_kernels.cuh  penner_real.cpp  penner_types.h
src/pyrxmesh/: __init__.py  core.py
src/stubs/common/: openmesh_trimesh.h
tests/: conftest.py  test_pyrxmesh.py
