[build-system]
build-backend = "scikit_build_core.build"
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2"]

[project]
authors = [
  {name = "Andrea Pozzetti"}
]
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Operating System :: POSIX :: Linux",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering"
]
dependencies = [
  "numpy"
]
description = "Python bindings for RXMesh (GPU-accelerated triangle mesh processing)"
name = "pyrxmesh"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

[project.optional-dependencies]
test = [
  "pytest",
  "trimesh",
]

[project.urls]
Homepage = "https://github.com/PozzettiAndrea/pyrxmesh"
"Bug Reports" = "https://github.com/PozzettiAndrea/pyrxmesh/issues"
"Source Code" = "https://github.com/PozzettiAndrea/pyrxmesh"

[tool.cibuildwheel]
before-build = "python patches/fix_cuda13_compat.py"
build = "cp310-* cp311-* cp312-* cp313-*"
skip = "*musllinux* *i686* *macosx* *win*"
test-command = "python -c \"import pyrxmesh; print(pyrxmesh.__version__); print('OK')\""
test-requires = "numpy"

[tool.cibuildwheel.linux]
archs = ["x86_64"]
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

[tool.scikit-build]
wheel.py-api = "cp312"
wheel.packages = ["src/pyrxmesh"]
cmake.build-type = "Release"
cmake.args = ["-DRX_USE_POLYSCOPE=OFF", "-DRX_BUILD_TESTS=OFF", "-DRX_BUILD_APPS=OFF", "-DCMAKE_POLICY_VERSION_MINIMUM=3.5"]
